--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span>Arke</span>
             </a>
             <nav class="main-nav">
-             <ul>
+               <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="eras.html">Eras</a></li>
                     <li><a href="topics.html">Topics</a></li>
@@ -61,10 +61,10 @@
                     <a href="article/the-battle-of-wizna.html" class="btn btn-secondary">Read Article</a>
                 </div>
                 <div class="featured-card">
-                    <img src="images/featured-image-3.jpg" alt="Featured Article 3 Placeholder">
-                    <h3>[Placeholder] The Real Story of the Silk Road</h3>
-                    <p>Delve into the vibrant exchange of ideas, cultures, and technologies across ancient trade routes.</p>
-                    <a href="#" class="btn btn-secondary">Coming Soon</a>
+                    <img src="images/laconia-card-placeholder.jpg" alt="A sinking ship and U-boat amidst a naval battle">
+                    <h3>The Cross of the Laconia: Humanity and Brutality at Sea</h3>
+                    <p>Amidst WWII's naval battles, a U-boat captain's act of mercy turned to tragedy. A story of compassion punished by the brutality of war.</p>
+                    <a href="article/the-cross-of-the-laconia.html" class="btn btn-secondary">Read Article</a>
                 </div>
             </div>
         </section>
