--- a/article/the-cross-of-the-laconia.html
+++ b/article/the-cross-of-the-laconia.html
@@ -37,8 +37,13 @@
     <main class="article-page">
         <section class="hero-article">
             <div class="hero-image">
-                <img src="../images/laconia-hero-placeholder.jpg" alt="A depiction of the HMS Laconia incident at sea">
-            </div>
+                <img
+                    class="lazy blur-up"
+                    src="../images/laconia-hero-blur.jpg"
+                    data-src="../images/laconia-hero.jpg"
+                    alt="A dramatic depiction of the HMS Laconia sinking at sea, with survivors in the water."
+                    width="1920"
+                    height="1080"> </div>
             <div class="container hero-content">
                 <h1>The Cross of the Laconia: A Collision of Humanity and Brutality at Sea</h1>
                 <p class="article-meta">
@@ -60,6 +65,16 @@
             <p>Beneath the waves, the Type IXC U-boat <span class="tooltip" data-tooltip="A German Type IXC U-boat, infamous for its involvement in the Laconia incident.">U-156</span>, commanded by the seasoned and, as we shall see, unexpectedly humane Korvettenkapitän Werner Hartenstein, was on patrol. His mission: sink enemy shipping. And at 20:07, U-156 fired torpedoes that struck home.</p>
             <p>The Laconia, hit twice, quickly succumbed. Chaos erupted in the darkness as thousands spilled into the water, clinging to lifeboats, rafts, or simply flotsam amidst the oil and wreckage. The screams of the dying, the cries of women and children, and the guttural shouts of men in a multitude of languages filled the night. It was a scene of utter pandemonium.</p>
 
+            <figure>
+                <img
+                    class="lazy blur-up"
+                    src="../images/laconia-sinking-blur.jpg"
+                    data-src="../images/laconia-sinking.jpg"
+                    alt="Chaotic scene of survivors in the water with debris from a sunken ship."
+                    width="800"
+                    height="450"> <figcaption>Thousands of survivors were plunged into the South Atlantic's waters after the Laconia was torpedoed.</figcaption>
+            </figure>
+
             <h2>An Act of Unexpected Mercy</h2>
             <p>What happened next was utterly unprecedented in the brutal calculus of U-boat warfare. Hartenstein surfaced his submarine, intending to pick up any senior officers for interrogation. But as he surveyed the carnage, he was confronted by the sheer scale of the disaster: thousands of people, including hundreds of his country's Italian allies, struggling in the water.</p>
             <p>This wasn't just a sunk ship; it was a humanitarian catastrophe unfolding before his eyes. Disregarding standard naval procedure—indeed, acting against the very spirit of unrestricted submarine warfare—Hartenstein made a decision that would echo through history. He began pulling survivors from the water, focusing on the Italians but taking all who could be reached. More astonishingly, he broadcast a clear message, in English, over the emergency frequency: "U-boat rescuing survivors of Laconia. Please assist." He even displayed Red Cross flags on his conning tower.</p>
@@ -71,11 +86,21 @@
             <p>Bombs rained down. One fell squarely among the lifeboats being towed by U-156, shattering them and sending their occupants back into the oil-slicked water. Another bomb narrowly missed the U-boat itself. Hartenstein, forced to choose between the lives of his crew and the vulnerable survivors, had no choice but to cut the tow ropes and dive to escape. The other U-boats followed suit, leaving hundreds, if not thousands, to their fate.</p>
             <p>The French ships, eventually arriving, managed to rescue many more, but the damage was done. The humanitarian effort had been shattered, and hundreds who might have been saved perished.</p>
 
+            <figure>
+                <img
+                    class="lazy blur-up"
+                    src="../images/laconia-bombing-blur.jpg"
+                    data-src="../images/laconia-bombing.jpg"
+                    alt="An American B-24 bomber flying over a U-boat and scattered lifeboats."
+                    width="800"
+                    height="450"> <figcaption>An American B-24 Liberator bomber attacked the German U-boat U-156 while it was rescuing survivors, leading to further loss of life.</figcaption>
+            </figure>
+
             <h2>The Infamous "Laconia Order"</h2>
             <p>The repercussions were swift and far-reaching. Grand Admiral Karl Dönitz, Commander of the German U-boat Arm, was enraged by the American attack. He saw Hartenstein's act of mercy and the subsequent targeting by the Allies as a betrayal that endangered his U-boats and undermined the very essence of submarine warfare.</p>
             <p>On September 17, 1942, Dönitz issued what became known as the "Laconia Order." It was stark, unequivocal, and chilling:</p>
             <blockquote>
-                <p>"No attempt of any kind must be made at rescuing any members of ships sunk, and this includes picking up persons in the water and putting them in lifeboats, righting capsized lifeboats, and handing over food and water. Rescue contradicts the elementary necessity of war for the destruction of ships and crews."</p>
+                <p>“No attempt of any kind must be made at rescuing any members of ships sunk, and this includes picking up persons in the water and putting them in lifeboats, righting capsized lifeboats, and handing over food and water. Rescue contradicts the elementary necessity of war for the destruction of ships and crews.”</p>
             </blockquote>
             <p>While an earlier order from 1940 had already discouraged rescues, the Laconia Order codified and reinforced a brutal policy, removing any ambiguity for U-boat commanders. It became a significant piece of evidence against Dönitz at the Nuremberg Trials, where he was ultimately acquitted of the specific charge related to the order (though censured), as it was argued Allied forces had similar 'no rescue' policies, particularly given the Laconia incident's context.</p>
 
