--- a/article/the-cross-of-the-laconia.html
+++ b/article/the-cross-of-the-laconia.html
@@ -43,7 +43,8 @@
                     data-src="../images/laconia-hero.jpg"
                     alt="A dramatic depiction of the HMS Laconia sinking at sea, with survivors in the water."
                     width="1920"
-                    height="1080"> </div>
+                    height="1080">
+            </div>
             <div class="container hero-content">
                 <h1>The Cross of the Laconia: A Collision of Humanity and Brutality at Sea</h1>
                 <p class="article-meta">
@@ -68,10 +69,10 @@
             <figure>
                 <img
                     class="lazy blur-up"
-                    src="../images/Cross-Of-Laconia/laconia.jpg"
-                    alt="Chaotic scene of survivors in the water with debris from a sunken ship."
+                    src="../images/Cross-Of-Laconia/laconia.jpg" data-src="../images/Cross-Of-Laconia/laconia.jpg" alt="Chaotic scene of survivors in the water with debris from a sunken ship."
                     width="800"
-                    height="450"> <figcaption>Thousands of survivors were plunged into the South Atlantic's waters after the Laconia was torpedoed.</figcaption>
+                    height="450">
+                <figcaption>Thousands of survivors were plunged into the South Atlantic's waters after the Laconia was torpedoed.</figcaption>
             </figure>
 
             <h2>An Act of Unexpected Mercy</h2>
@@ -88,11 +89,10 @@
             <figure>
                 <img
                     class="lazy blur-up"
-                    src="../images/Cross-Of-Laconia/SinkingSub.jpg"
-                
-                    alt="An American B-24 bomber flying over a U-boat and scattered lifeboats."
+                    src="../images/Cross-Of-Laconia/SinkingSub.jpg" data-src="../images/Cross-Of-Laconia/SinkingSub.jpg" alt="An American B-24 bomber flying over a U-boat and scattered lifeboats."
                     width="800"
-                    height="450"> <figcaption>An American B-24 Liberator bomber attacked the German U-boat U-156 while it was rescuing survivors, leading to further loss of life.</figcaption>
+                    height="450">
+                <figcaption>An American B-24 Liberator bomber attacked the German U-boat U-156 while it was rescuing survivors, leading to further loss of life.</figcaption>
             </figure>
 
             <h2>The Infamous "Laconia Order"</h2>
