Tooltips for people

--- a/article/the-cross-of-the-laconia.html
+++ b/article/the-cross-of-the-laconia.html
@@ -63,13 +63,19 @@
 
             <h2>The Liners and the Lurker: An Unlikely Encounter</h2>
             <p>It was September 12, 1942. The British armed merchant cruiser <span class="tooltip" data-tooltip="A British armed merchant cruiser, originally a Cunard passenger liner, involved in a notable naval incident during World War II.">HMS Laconia</span>, a converted Cunard passenger liner, was steaming alone through the vast, unforgiving expanse of the South Atlantic, off the coast of West Africa. Her hold was a microcosm of the war's global reach: some 2,700 souls were on board, including British service personnel, their families, Polish guards, and, crucially, around 1,800 Italian prisoners of war. It was a veritable floating city, packed to the gills.</p>
-            <p>Beneath the waves, the Type IXC U-boat <span class="tooltip" data-tooltip="A German Type IXC U-boat, infamous for its involvement in the Laconia incident.">U-156</span>, commanded by the seasoned and, as we shall see, unexpectedly humane Korvettenkapitän Werner Hartenstein, was on patrol. His mission: sink enemy shipping. And at 20:07, U-156 fired torpedoes that struck home.</p>
+            <p>Beneath the waves, the Type IXC U-boat <span class="tooltip" data-tooltip="A German Type IXC U-boat, infamous for its involvement in the Laconia incident.">U-156</span>, commanded by the seasoned and, as we shall see, unexpectedly humane Korvettenkapitän <span class="tooltip"
+                data-tooltip-description="Werner Hartenstein (1908-1943) was a German U-boat commander during WWII, known for his controversial decision to rescue survivors of the torpedoed HMS Laconia."
+                data-tooltip-image="../images/tooltip_portraits/hartenstein.jpg">
+                Werner Hartenstein
+            </span>, was on patrol. His mission: sink enemy shipping. And at 20:07, U-156 fired torpedoes that struck home.</p>
             <p>The Laconia, hit twice, quickly succumbed. Chaos erupted in the darkness as thousands spilled into the water, clinging to lifeboats, rafts, or simply flotsam amidst the oil and wreckage. The screams of the dying, the cries of women and children, and the guttural shouts of men in a multitude of languages filled the night. It was a scene of utter pandemonium.</p>
 
             <figure>
                 <img
                     class="lazy blur-up"
-                    src="../images/Cross-Of-Laconia/laconia.jpg" data-src="../images/Cross-Of-Laconia/laconia.jpg" alt="Chaotic scene of survivors in the water with debris from a sunken ship."
+                    src="../images/Cross-Of-Laconia/laconia-blur.jpg"
+                    data-src="../images/Cross-Of-Laconia/laconia.jpg"
+                    alt="Chaotic scene of survivors in the water with debris from a sunken ship."
                     width="800"
                     height="450">
                 <figcaption>Thousands of survivors were plunged into the South Atlantic's waters after the Laconia was torpedoed.</figcaption>
@@ -81,7 +87,11 @@
             <p>Other U-boats, U-506 and U-507, along with the Italian submarine Comandante Cappellini, were diverted to assist. French surface ships from Dakar, the cruiser Gloire and sloops Annamite and Dumont d'Urville, also steamed towards the scene. For a fleeting moment, in the midst of total war, an extraordinary, fragile act of international cooperation and mercy was taking place.</p>
 
             <h2>The Hammer Blow: When Rescue Became Target</h2>
-            <p>Then came the hammer blow. On September 16, as U-156, U-506, U-507, and the Cappellini bobbed on the surface, packed with survivors and towing lifeboats, an American B-24 Liberator bomber from Ascension Island appeared overhead. Its pilot, Lieutenant James D. Harden, reported seeing a U-boat, despite the clear Red Cross markings and visible survivors. His orders, he later claimed, were to sink any U-boat on sight.</p>
+            <p>Then came the hammer blow. On September 16, as U-156, U-506, U-507, and the Cappellini bobbed on the surface, packed with survivors and towing lifeboats, an American B-24 Liberator bomber from Ascension Island appeared overhead. Its pilot, Lieutenant <span class="tooltip"
+                data-tooltip-description="Lieutenant James D. Harden was the American B-24 Liberator pilot who attacked the U-boats rescuing Laconia survivors, an act that led to the infamous Laconia Order."
+                data-tooltip-image="../images/tooltip_portraits/harden.jpg">
+                James D. Harden
+            </span>, reported seeing a U-boat, despite the clear Red Cross markings and visible survivors. His orders, he later claimed, were to sink any U-boat on sight.</p>
             <p>Tragically, with devastating consequences, he attacked.</p>
             <p>Bombs rained down. One fell squarely among the lifeboats being towed by U-156, shattering them and sending their occupants back into the oil-slicked water. Another bomb narrowly missed the U-boat itself. Hartenstein, forced to choose between the lives of his crew and the vulnerable survivors, had no choice but to cut the tow ropes and dive to escape. The other U-boats followed suit, leaving hundreds, if not thousands, to their fate.</p>
             <p>The French ships, eventually arriving, managed to rescue many more, but the damage was done. The humanitarian effort had been shattered, and hundreds who might have been saved perished.</p>
@@ -89,17 +99,24 @@
             <figure>
                 <img
                     class="lazy blur-up"
-                    src="../images/Cross-Of-Laconia/SinkingSub.jpg" data-src="../images/Cross-Of-Laconia/SinkingSub.jpg" alt="An American B-24 bomber flying over a U-boat and scattered lifeboats."
+                    src="../images/Cross-Of-Laconia/SinkingSub-blur.jpg"
+                    data-src="../images/Cross-Of-Laconia/SinkingSub.jpg"
+                    alt="An American B-24 bomber flying over a U-boat and scattered lifeboats."
                     width="800"
                     height="450">
                 <figcaption>An American B-24 Liberator bomber attacked the German U-boat U-156 while it was rescuing survivors, leading to further loss of life.</figcaption>
             </figure>
 
             <h2>The Infamous "Laconia Order"</h2>
-            <p>The repercussions were swift and far-reaching. Grand Admiral Karl Dönitz, Commander of the German U-boat Arm, was enraged by the American attack. He saw Hartenstein's act of mercy and the subsequent targeting by the Allies as a betrayal that endangered his U-boats and undermined the very essence of submarine warfare.</p>
+            <p>The repercussions were swift and far-reaching. Grand Admiral <span class="tooltip"
+                data-tooltip-description="Karl Dönitz (1891-1980) was a German admiral who commanded the German Navy's U-boat arm during WWII and later briefly served as Germany's head of state."
+                data-tooltip-image="../images/tooltip_portraits/donitz.jpg">
+                Karl Dönitz
+            </span>, Commander of the German U-boat Arm, was enraged by the American attack. He saw Hartenstein's act of mercy and the subsequent targeting by the Allies as a betrayal that endangered his U-boats and undermined the very essence of submarine warfare.</p>
             <p>On September 17, 1942, Dönitz issued what became known as the "Laconia Order." It was stark, unequivocal, and chilling:</p>
             <blockquote>
                 <p>“No attempt of any kind must be made at rescuing any members of ships sunk, and this includes picking up persons in the water and putting them in lifeboats, righting capsized lifeboats, and handing over food and water. Rescue contradicts the elementary necessity of war for the destruction of ships and crews.”</p>
+                <footer>- Karl Dönitz</footer>
             </blockquote>
             <p>While an earlier order from 1940 had already discouraged rescues, the Laconia Order codified and reinforced a brutal policy, removing any ambiguity for U-boat commanders. It became a significant piece of evidence against Dönitz at the Nuremberg Trials, where he was ultimately acquitted of the specific charge related to the order (though censured), as it was argued Allied forces had similar 'no rescue' policies, particularly given the Laconia incident's context.</p>
 
