Tooltips with img paths

--- a/article/the-cross-of-the-laconia.html
+++ b/article/the-cross-of-the-laconia.html
@@ -110,7 +110,7 @@
             <h2>The Infamous "Laconia Order"</h2>
             <p>The repercussions were swift and far-reaching. Grand Admiral <span class="tooltip"
                 data-tooltip-description="Karl Dönitz (1891-1980) was a German admiral who commanded the German Navy's U-boat arm during WWII and later briefly served as Germany's head of state."
-                data-tooltip-image="../images/tooltip_portraits/donitz.jpg">
+                data-tooltip-image="../images/tooltip_portraits/dönitz.jpg">
                 Karl Dönitz
             </span>, Commander of the German U-boat Arm, was enraged by the American attack. He saw Hartenstein's act of mercy and the subsequent targeting by the Allies as a betrayal that endangered his U-boats and undermined the very essence of submarine warfare.</p>
             <p>On September 17, 1942, Dönitz issued what became known as the "Laconia Order." It was stark, unequivocal, and chilling:</p>
