--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="article/the-battle-of-wizna.html" class="btn btn-secondary">Read Article</a>
                 </div>
                 <div class="featured-card">
-                    <img src="images/laconia-card-placeholder.jpg" alt="A sinking ship and U-boat amidst a naval battle">
+                    <img src="images/Laconia.webp" alt="A sinking ship and U-boat amidst a naval battle">
                     <h3>The Cross of the Laconia: Humanity and Brutality at Sea</h3>
                     <p>Amidst WWII's naval battles, a U-boat captain's act of mercy turned to tragedy. A story of compassion punished by the brutality of war.</p>
                     <a href="article/the-cross-of-the-laconia.html" class="btn btn-secondary">Read Article</a>
